<resources>
    <string name="app_name">Bulk SMS Sender</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">About</string>
    <string name="large_text">
        "Is there an upcoming birthday and you want to send an invitation via SMS to multiple contacts?
Or you have a big announcement for your friends/family?
You can easily do all these and even more with "Multi Short Message Service", an app that helps you send SMS messages to large amounts of recipients.
"
        "This is a small and powerful application that enables users to send generic and customized SMS messages through their carrier network to contacts that are listed in a Text input file. Bulk SMS Sender can serve for mass delivery of holiday greetings, as an efficient marketing tool and more.
\n"
        "It reads a list of contact numbers from a Text file and send SMS to all contacts one by one."
        "\n\n"
        "\nFeatures\n\n"
        "- easy to use\n"
        "- Send SMS messages to an unlimited number of contacts with just a few clicks\n"
        "- Get live progress updates during the sending process\n"
        "- it takes a pause after a specific interval of time, because a large bulk of SMS can spam your chip\n"
        "- can add customize features on request"
        "\n\n"

        "\nContact Us\n\n"
        "email: contact@codinginfinte.com\n"
        "website: www.codinginfinite.com \n"

    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="send_sms">Send SMS</string>
    <string name="settings">Settings</string>
</resources>
